[package]
name = "graftpress"
version = "0.1.1"
authors = ["nilinswap <nilinswap@gmail.com>"]
description = "Binary providing graftpress command-line utilities"
license = "BSD-2-Clause"
edition = "2018"


[dependencies]
realm = "^0.1.7"
graftpress_core = "^0.1.1"
futures = "~0.1.26"
hyper = "~0.12.27"
http = "~0.1.17"
