[package]
name = "graftpress_lib"
version = "0.1.0"
authors = ["nilinswap <nilinswap@gmail.com>"]
edition = "2018"

[dependencies]
url = "~1.7.1"
failure = "0.1.5"
futures = "~0.1.26"
hyper = "~0.12.27"
futures-cpupool = "~0.1.8"
lazy_static = "~1.2.0"
http = "~0.1.17"
serde_json = "~1.0.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
graft = "0.1.7"
itertools = "~0.7.8"
realm = {path = "/Users/swapnil/forgit/ackotech/realm"}

[dependencies.chrono]
version = "0.4"
features = ["serde"]